本棚のページネーションを修正、settingのisSefaultを修正